# pdf_feedback_exporter

./: .pre-commit-config.yaml  README.md  pyproject.toml
pdf_feedback_exporter/: __init__.py  exporter.py
pdf_feedback_exporter/preprocessors/html/: __init__.py  base.py  changescorecolor.py  changetotalscore.py  embedimages.py  fixmathlinebreaks.py  makecolorsimportant.py  prettifytables.py
pdf_feedback_exporter/preprocessors/pdf/: __init__.py  addwatermark.py  base.py  converthtml2pdf.py  createwatermark.py
